--- a/source/templates/search.html
+++ b/source/templates/search.html
@@ -13,15 +13,19 @@
             <input type="text" placeholder="Search by Movie / Genre / Cast / Review Content" name="search_bar">
             <button type="submit" value="Search">Search</button>
         </form>
-        <p></p>
-        <center>
+
+        <table>
         {% for item in data %}
             <tr>
-                <td> <a href={{item[1]}}>{{item[0]}}</a> </td>
-                <br/>
-                </br>
+                <td style="text-align: left;"> <a href={{item[1]}}>{{item[0]}}</a></td>
+                <td colspan="5"><p> - {{item[3]}}</p></td>
+            </tr>
+            <tr>
+                <td colspan="6">
+                    <p>{{item[2]}}</p>
+                </td>
             </tr>
         {% endfor %}
-        </center>
+        </table>
     </body>
 </html>
