Deploying using shell script in Procfile

--- a/source/templates/search.html
+++ b/source/templates/search.html
@@ -7,7 +7,16 @@
         <link rel="stylesheet" href="static/index.css">
     </head>
     <body>
-        <h1 style="color:red;"><center>Welcome to "Not so Rotten Tomatoes" Search</center></h1>
+        <style>
+            body {
+              background-image: url('img_girl.jpg');
+              background-repeat: no-repeat;
+              background-attachment: fixed;
+              background-size: cover;
+            }
+    </style>
+        <h1 style="color:red;"><center>Welcome to "Not so Rotten Tomatoes" </center></h1>
+
 
         <form class="example" method="post" action="" style="margin:auto;max-width:600px">
             <input type="text" placeholder="Search by Movie / Genre / Cast / Review Content" name="search_bar">
